--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="text-center">
                         <h1 class="mx-auto my-0 text-uppercase">RRDEVCODER</h1>
                         <h2 class="text-white-50 mx-auto mt-2 mb-5">My homepage</h2>
-                        <a class="btn btn-primary" href="#about">Getting Started</a>
+                        <a class="btn btn-primary" href="#about">Getting Started Now</a>
                     </div>
                 </div>
             </div>
