--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-lg-8">
-                        <h2 class="text-white mb-4">Built with Bootstrap 5</h2>
+                        <h2 class="text-white mb-4">Built with Care</h2>
                         <p>
                         </p>
                     </div>
                 </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
+                <!-- <img class="img-fluid" src="assets/img/ipad.png" alt="..." /> -->
             </div>
         </section>
         <!-- Projects-->
